added css changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header>
             <h1>
                 <div class="header">
-                    Let's Play!
+                    <em>Let's Play!</em>
                 </div>
             </h1>
         </header>
@@ -58,7 +58,7 @@
         </section>
 
         <footer>
-                Thanks for Playing!!
+                
         </footer>
 
     </div>
